--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <title>Ezz</title>
   </head>
   <body>
+    <!-- Start Header section -->
+
     <div class="header" id="header">
       <div class="container">
         <a href="index.html" class="logo">Ezz</a>
@@ -30,5 +32,29 @@
         </ul>
       </div>
     </div>
+
+    <!-- End Header section -->
+
+    <!-- Start Landing section -->
+
+    <div class="landing">
+      <div class="container">
+        <div class="text">
+          <h1>Welcome, To Ezz World</h1>
+          <p>
+            Here Iam gonna share everything about my life. Books Iam reading,
+            Games Iam Playing, Stories and Events
+          </p>
+        </div>
+        <div class="image">
+          <img src="imgs/landing-image.png" alt="" />
+        </div>
+      </div>
+      <a href="#articles" class="go-down">
+        <i class="fa-solid fa-angles-down fa-2x"></i>
+      </a>
+    </div>
+
+    <!-- End Landing section -->
   </body>
 </html>
