--- a/index.html
+++ b/index.html
@@ -28,7 +28,66 @@
           <li><a href="#articles">Articles</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#features">Features</a></li>
-          <li><a href="#">Other Links</a></li>
+          <li>
+            <a href="#" >Other Links</a>
+            <!-- Start Mega Menu -->
+            <div class="mega-menu">
+              <div class="image">
+                <img src="imgs/megamenu.png" alt="" />
+              </div>
+              <ul class="links">
+                <li>
+                  <a href="#"
+                    ><i class="fa-regular fa-comments"></i>Testimonials</a
+                  >
+                </li>
+                <li>
+                  <a href="#"><i class="fa-regular fa-user"></i>Team Members</a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-regular fa-building"></i>Services</a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa-regular fa-circle-check"></i>Our Skills</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa-regular fa-clipboard"></i>How It Works</a
+                  >
+                </li>
+              </ul>
+              <ul class="links">
+                <li>
+                  <a href="#"
+                    ><i class="fa-regular fa-calendar-days"></i>Events</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa-solid fa-server"></i>Pricing Plans</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa-regular fa-circle-play"></i>Top Videos</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa-solid fa-chart-bar"></i>Stats</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa-solid fa-percent"></i>Request A Discount</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <!-- End Mega Menu -->
+          </li>
         </ul>
       </div>
     </div>
