Add Articles Section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#features">Features</a></li>
           <li>
-            <a href="#" >Other Links</a>
+            <a href="#">Other Links</a>
             <!-- Start Mega Menu -->
             <div class="mega-menu">
               <div class="image">
@@ -75,9 +75,7 @@
                   >
                 </li>
                 <li>
-                  <a href="#"
-                    ><i class="fa-solid fa-chart-bar"></i>Stats</a
-                  >
+                  <a href="#"><i class="fa-solid fa-chart-bar"></i>Stats</a>
                 </li>
                 <li>
                   <a href="#"
@@ -115,5 +113,127 @@
     </div>
 
     <!-- End Landing section -->
+
+    <!-- Start Articles section -->
+
+    <div class="articles" id="articles">
+      <h2 class="main-title">Articles</h2>
+      <div class="container">
+        <div class="box">
+          <img src="imgs/cat-01.jpg" alt="" />
+          <div class="content">
+            <h3>Test Article</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a href="#">Read More</a>
+            <i class="fa-solid fa-right-long"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="imgs/cat-02.jpg" alt="" />
+          <div class="content">
+            <h3>Test Article</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a href="#">Read More</a>
+            <i class="fa-solid fa-right-long"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="imgs/cat-03.jpg" alt="" />
+          <div class="content">
+            <h3>Test Article</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a href="#">Read More</a>
+            <i class="fa-solid fa-right-long"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="imgs/cat-04.jpg" alt="" />
+          <div class="content">
+            <h3>Test Article</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a href="#">Read More</a>
+            <i class="fa-solid fa-right-long"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="imgs/cat-05.jpg" alt="" />
+          <div class="content">
+            <h3>Test Article</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a href="#">Read More</a>
+            <i class="fa-solid fa-right-long"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="imgs/cat-06.jpg" alt="" />
+          <div class="content">
+            <h3>Test Article</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a href="#">Read More</a>
+            <i class="fa-solid fa-right-long"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="imgs/cat-07.jpg" alt="" />
+          <div class="content">
+            <h3>Test Article</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a href="#">Read More</a>
+            <i class="fa-solid fa-right-long"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="imgs/cat-08.jpg" alt="" />
+          <div class="content">
+            <h3>Test Article</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a href="#">Read More</a>
+            <i class="fa-solid fa-right-long"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- End Articles section -->
   </body>
 </html>
