--- a/index.html
+++ b/index.html
@@ -233,7 +233,91 @@
         </div>
       </div>
     </div>
-    
+
     <!-- End Articles section -->
+
+    <!-- Start Gallery section -->
+
+    <div class="gallery" id="gallery">
+      <h2 class="main-title">Gallery</h2>
+      <div class="container">
+        <div class="box">
+          <div class="image">
+            <img src="imgs/gallery-01.png" alt="Gallery 01" />
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="imgs/gallery-02.png" alt="Gallery 02" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="imgs/gallery-03.jpg" alt="Gallery 03" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="imgs/gallery-04.png" alt="Gallery 04" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="imgs/gallery-05.jpg" alt="Gallery 05" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="imgs/gallery-06.png" alt="Gallery 06" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Gallery section -->
+
+    <!-- Start Features section -->
+
+    <div class="features" id="features">
+      <h2 class="main-title">Features</h2>
+      <div class="container">
+        <div class="box quality">
+          <div class="img-holder">
+            <img src="imgs/features-01.jpg" alt="" />
+          </div>
+          <h2>Quality</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum
+            hic veniam eligendi minima
+          </p>
+          <a href="#" class="btn">More</a>
+        </div>
+        <div class="box time">
+          <div class="img-holder">
+            <img src="imgs/features-02.jpg" alt="" />
+          </div>
+          <h2>Time</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum
+            hic veniam eligendi minima
+          </p>
+          <a href="#" class="btn">More</a>
+        </div>
+        <div class="box passion">
+          <div class="img-holder">
+            <img src="imgs/features-03.jpg" alt="" />
+          </div>
+          <h2>Passion</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum
+            hic veniam eligendi minima
+          </p>
+          <a href="#" class="btn">More</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Features section -->
   </body>
 </html>
