--- a/index.html
+++ b/index.html
@@ -246,7 +246,6 @@
             <img src="imgs/gallery-01.png" alt="Gallery 01" />
           </div>
         </div>
-
         <div class="box">
           <div class="image">
             <img src="imgs/gallery-02.png" alt="Gallery 02" />
@@ -319,5 +318,111 @@
     </div>
 
     <!-- End Features section -->
+
+    <!-- Start Testimonials Section -->
+
+    <div class="testimonials" id="testimonials">
+      <h2 class="main-title">Testimonials</h2>
+      <div class="container">
+        <div class="box">
+          <img src="imgs/avatar-01.png" alt="" />
+          <h3>Ahmed Ezz</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="rate">
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="box">
+          <img src="imgs/avatar-02.png" alt="" />
+          <h3>Mohamed Ibrahim</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="rate">
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="box">
+          <img src="imgs/avatar-03.png" alt="" />
+          <h3>Shady Nabil</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="rate">
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="box">
+          <img src="imgs/avatar-04.png" alt="" />
+          <h3>Amr Hendawy</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="rate">
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="box">
+          <img src="imgs/avatar-05.png" alt="" />
+          <h3>Sherief Ashraf</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="rate">
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="box">
+          <img src="imgs/avatar-06.png" alt="" />
+          <h3>Osama Mohamed</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="rate">
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Testimonials Section -->
   </body>
 </html>
