--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
               </div>
               <ul class="links">
                 <li>
-                  <a href="#"
+                  <a href="#testimonials"
                     ><i class="fa-regular fa-comments"></i>Testimonials</a
                   >
                 </li>
                 <li>
-                  <a href="#"><i class="fa-regular fa-user"></i>Team Members</a>
+                  <a href="#team"><i class="fa-regular fa-user"></i>Team Members</a>
                 </li>
                 <li>
                   <a href="#"><i class="fa-regular fa-building"></i>Services</a>
@@ -424,5 +424,135 @@
     </div>
 
     <!-- End Testimonials Section -->
+
+    <!-- Start Team Members Section -->
+
+    <div class="team" id="team">
+      <h2 class="main-title">Team Members</h2>
+      <div class="container">
+        <div class="box">
+          <div class="data">
+            <img src="imgs/team-01.jpg" alt="" />
+            <div class="social">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Ahmed Ezz</h3>
+            <p>Full Stack Developer</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img src="imgs/team-02.jpg" alt="" />
+            <div class="social">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Ahmed Ezz</h3>
+            <p>Full Stack Developer</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img src="imgs/team-03.jpg" alt="" />
+            <div class="social">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Ahmed Ezz</h3>
+            <p>Full Stack Developer</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img src="imgs/team-04.jpg" alt="" />
+            <div class="social">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Ahmed Ezz</h3>
+            <p>Full Stack Developer</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img src="imgs/team-05.png" alt="" />
+            <div class="social">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Ahmed Ezz</h3>
+            <p>Full Stack Developer</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img src="imgs/team-06.png" alt="" />
+            <div class="social">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Ahmed Ezz</h3>
+            <p>Full Stack Developer</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img src="imgs/team-07.jpg" alt="" />
+            <div class="social">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Ahmed Ezz</h3>
+            <p>Full Stack Developer</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img src="imgs/team-08.jpg" alt="" />
+            <div class="social">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Ahmed Ezz</h3>
+            <p>Full Stack Developer</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Team Members Section -->
   </body>
 </html>
