Add Services Section

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
                   >
                 </li>
                 <li>
-                  <a href="#team"><i class="fa-regular fa-user"></i>Team Members</a>
+                  <a href="#team"
+                    ><i class="fa-regular fa-user"></i>Team Members</a
+                  >
                 </li>
                 <li>
-                  <a href="#"><i class="fa-regular fa-building"></i>Services</a>
+                  <a href="#services"><i class="fa-regular fa-building"></i>Services</a>
                 </li>
                 <li>
                   <a href="#"
@@ -554,5 +556,57 @@
     </div>
 
     <!-- End Team Members Section -->
+
+    <!-- Start Services Section -->
+
+    <div class="services" id="services">
+      <h2 class="main-title">Services</h2>
+      <div class="container">
+        <div class="box">
+          <i class="fa-solid fa-user-shield fa-4x"></i>
+          <h3>Security</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-screwdriver-wrench fa-4x"></i>
+          <h3>Fixing Issues</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-map-location fa-4x"></i>
+          <h3>Location</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-laptop-code fa-4x"></i>
+          <h3>Coding</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-palette fa-4x"></i>
+          <h3>Security</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-bullhorn fa-4x"></i>
+          <h3>Marketing</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Services Section -->
   </body>
 </html>
