--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
                   >
                 </li>
                 <li>
-                  <a href="#services"><i class="fa-regular fa-building"></i>Services</a>
+                  <a href="#services"
+                    ><i class="fa-regular fa-building"></i>Services</a
+                  >
                 </li>
                 <li>
-                  <a href="#"
+                  <a href="#our-skills"
                     ><i class="fa-regular fa-circle-check"></i>Our Skills</a
                   >
                 </li>
@@ -608,5 +610,85 @@
     </div>
 
     <!-- End Services Section -->
+
+    <!-- Start Our Skills Section -->
+
+    <div class="our-skills" id="our-skills">
+      <h2 class="main-title">Our Skills</h2>
+      <div class="container">
+        <img src="imgs/skills.png" alt="" />
+        <div class="skills">
+          <div class="skill">
+            <h3>HTML<span>80%</span></h3>
+            <div class="the-progress">
+              <span style="width: 80%"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>CSS<span>85%</span></h3>
+            <div class="the-progress">
+              <span style="width: 85%"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>JavaScript<span>70%</span></h3>
+            <div class="the-progress">
+              <span style="width: 70%"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>Python<span>80%</span></h3>
+            <div class="the-progress">
+              <span style="width: 80%"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Our Skills Section -->
+
+    <!-- Start Work Steps Section -->
+
+    <div class="work-steps" id="work-steps">
+      <h2 class="main-title">How It Works ?</h2>
+      <div class="container">
+        <img src="imgs/work-steps.png" alt="" class="image" />
+        <div class="info">
+          <div class="box">
+            <img src="imgs/work-steps-1.png" alt="" />
+            <div class="text">
+              <h3>Business Analysis</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="imgs/work-steps-2.png" alt="" />
+            <div class="text">
+              <h3>Architecture</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="imgs/work-steps-3.png" alt="" />
+            <div class="text">
+              <h3>Developement</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Work Steps Section -->
   </body>
 </html>
