--- a/index.html
+++ b/index.html
@@ -438,8 +438,8 @@
           <div class="data">
             <img src="imgs/team-01.jpg" alt="" />
             <div class="social">
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
               <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
               <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
               <a href="#"><i class="fa-brands fa-youtube"></i></a>
             </div>
@@ -726,12 +726,71 @@
         <div class="subscribe">
           <form action="">
             <input type="email" placeholder="Enter Your Email" />
-            <input type="submit" value="Subscribe">
+            <input type="submit" value="Subscribe" />
           </form>
         </div>
       </div>
     </div>
 
     <!-- End Events Section -->
+
+    <!-- Start Pricing Section -->
+
+    <div class="pricing" id="pricing">
+      <h2 class="main-title">Pricing Plans</h2>
+      <div class="container">
+        <div class="box">
+          <h3 class="title">Basic</h3>
+          <img src="imgs/hosting-basic.png" alt="" />
+          <div class="price">
+            <span class="amount">$15</span>
+            <span class="time">Per Month</span>
+          </div>
+          <ul>
+            <li>10GB HDD Space</li>
+            <li>5 Email Addresses</li>
+            <li>2 Subdomains</li>
+            <li>4 Databases</li>
+            <li>Basic Support</li>
+          </ul>
+          <a href="#">Choose Plan</a>
+        </div>
+        <div class="box popular">
+          <div class="label">Most Popular</div>
+          <h3 class="title">Advanced</h3>
+          <img src="imgs/hosting-advanced.png" alt="" />
+          <div class="price">
+            <span class="amount">$25</span>
+            <span class="time">Per Month</span>
+          </div>
+          <ul>
+            <li>20GB HDD Space</li>
+            <li>10 Email Addresses</li>
+            <li>5 Subdomains</li>
+            <li>8 Databases</li>
+            <li>Advanced Support</li>
+          </ul>
+          <a href="#">Choose Plan</a>
+        </div>
+        <div class="box">
+          <h3 class="title">Professional</h3>
+          <img src="imgs/hosting-professional.png" alt="" />
+          <div class="price">
+            <span class="amount">$45</span>
+            <span class="time">Per Month</span>
+          </div>
+          <ul>
+            <li>50GB HDD Space</li>
+            <li>20 Email Addresses</li>
+            <li>10 Subdomains</li>
+            <li>20 Databases</li>
+            <li>Professional Support</li>
+          </ul>
+          <a href="#">Choose Plan</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Pricing Section -->
   </body>
 </html>
