--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                   >
                 </li>
                 <li>
-                  <a href="#"
+                  <a href="#videos"
                     ><i class="fa-regular fa-circle-play"></i>Top Videos</a
                   >
                 </li>
                 <li>
-                  <a href="#"><i class="fa-solid fa-chart-bar"></i>Stats</a>
+                  <a href="#stats"><i class="fa-solid fa-chart-bar"></i>Stats</a>
                 </li>
                 <li>
                   <a href="#"
@@ -823,5 +823,35 @@
     </div>
 
     <!-- End Videos Section -->
+
+    <!-- Start stats Section -->
+
+    <div class="stats">
+      <h2>Our Awesome Stats</h2>
+      <div class="container">
+        <div class="box">
+          <i class="fa-solid fa-user fa-2x"></i>
+          <span class="number">150</span>
+          <span class="text">Clients</span>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-code fa-2x"></i>
+          <span class="number">135</span>
+          <span class="text">Projects</span>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-globe fa-2x"></i>
+          <span class="number">50</span>
+          <span class="text">Countries</span>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-money-bill fa-2x"></i>
+          <span class="number">500</span>
+          <span class="text">Money</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- End stats Section -->
   </body>
 </html>
