--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
                   >
                 </li>
                 <li>
-                  <a href="#stats"><i class="fa-solid fa-chart-bar"></i>Stats</a>
+                  <a href="#stats"
+                    ><i class="fa-solid fa-chart-bar"></i>Stats</a
+                  >
                 </li>
                 <li>
-                  <a href="#"
+                  <a href="#discount"
                     ><i class="fa-solid fa-percent"></i>Request A Discount</a
                   >
                 </li>
@@ -826,7 +828,7 @@
 
     <!-- Start stats Section -->
 
-    <div class="stats">
+    <div class="stats" id="stats">
       <h2>Our Awesome Stats</h2>
       <div class="container">
         <div class="box">
@@ -853,5 +855,36 @@
     </div>
 
     <!-- End stats Section -->
+
+    <!-- Start Discount Section -->
+
+    <div class="discount" id="discount">
+      <div class="image">
+        <div class="content">
+          <h2>We Have A Discount</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi
+            asperiores consectetur, recusandae ratione provident necessitatibus,
+            cumque delectus commodi fuga praesentium beatae. Totam vel similique
+            laborum dicta aperiam odit doloribus corporis.
+          </p>
+          <img src="imgs/discount.png" alt="" />
+        </div>
+      </div>
+      <div class="form">
+        <div class="content">
+          <h2>Request A Discount</h2>
+          <form action="">
+            <input class="input" type="text" placeholder="Your Name" name="name"/>
+            <input class="input" type="email" placeholder="Your Email" name="email"/>
+            <input class="input" type="text" placeholder="Your Phone" name="mobile"/>
+            <textarea class="input" name="message" id="" placeholder="Tell Us About your Needs"></textarea>
+            <input type="submit" value="Send" />
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Discount Section -->
   </body>
 </html>
