Add Footer Section and finish

--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
         </div>
       </div>
     </div>
+    <div class="spikes"></div>
 
     <!-- End Articles section -->
 
@@ -558,6 +559,7 @@
         </div>
       </div>
     </div>
+    <div class="spikes"></div>
 
     <!-- End Team Members Section -->
 
@@ -696,6 +698,8 @@
     <!-- Start Events Section -->
 
     <div class="events" id="events">
+      <div class="dots dots-up"></div>
+      <div class="dots dots-down"></div>
       <h2 class="main-title">Latest Events</h2>
       <div class="container">
         <img src="imgs/events.png" alt="" />
@@ -739,6 +743,8 @@
     <!-- Start Pricing Section -->
 
     <div class="pricing" id="pricing">
+      <div class="dots dots-up"></div>
+      <div class="dots dots-down"></div>
       <h2 class="main-title">Pricing Plans</h2>
       <div class="container">
         <div class="box">
@@ -875,10 +881,30 @@
         <div class="content">
           <h2>Request A Discount</h2>
           <form action="">
-            <input class="input" type="text" placeholder="Your Name" name="name"/>
-            <input class="input" type="email" placeholder="Your Email" name="email"/>
-            <input class="input" type="text" placeholder="Your Phone" name="mobile"/>
-            <textarea class="input" name="message" id="" placeholder="Tell Us About your Needs"></textarea>
+            <input
+              class="input"
+              type="text"
+              placeholder="Your Name"
+              name="name"
+            />
+            <input
+              class="input"
+              type="email"
+              placeholder="Your Email"
+              name="email"
+            />
+            <input
+              class="input"
+              type="text"
+              placeholder="Your Phone"
+              name="mobile"
+            />
+            <textarea
+              class="input"
+              name="message"
+              id=""
+              placeholder="Tell Us About your Needs"
+            ></textarea>
             <input type="submit" value="Send" />
           </form>
         </div>
@@ -886,5 +912,74 @@
     </div>
 
     <!-- End Discount Section -->
+
+    <!-- Start Footer Section -->
+
+    <div class="footer">
+      <div class="container">
+        <div class="box">
+          <h3>Ezz</h3>
+          <ul class="social">
+            <li>
+              <a href="#" class="facebook"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="twitter"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="youtube"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </li>
+          </ul>
+          <p class="text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus
+            nulla rem, dignissimos iste aspernatur
+          </p>
+        </div>
+        <div class="box">
+          <ul class="links">
+            <li><a href="#">Important Link 1</a></li>
+            <li><a href="#">Important Link 2</a></li>
+            <li><a href="#">Important Link 3</a></li>
+            <li><a href="#">Important Link 4</a></li>
+            <li><a href="#">Important Link 5</a></li>
+          </ul>
+        </div>
+        <div class="box">
+          <div class="line">
+            <i class="fa-solid fa-location-dot"></i>
+            <div class="info">
+              Egypt, Giza, Inside The Sphinx, Room Number 220
+            </div>
+          </div>
+          <div class="line">
+            <i class="fa-regular fa-clock"></i>
+            <div class="info">Business Hours: From 10:00 To 18:00</div>
+          </div>
+          <div class="line">
+            <i class="fa-solid fa-phone-volume"></i>
+            <div class="info">+20123456789 <br>+20198765432</div>
+          </div>
+        </div>
+        <div class="box footer-gallery">
+          <img src="imgs/gallery-01.png" alt="" />
+          <img src="imgs/gallery-02.png" alt="" />
+          <img src="imgs/gallery-03.jpg" alt="" />
+          <img src="imgs/gallery-04.png" alt="" />
+          <img src="imgs/gallery-05.jpg" alt="" />
+          <img src="imgs/gallery-06.png" alt="" />
+        </div>
+      </div>
+      <p class="copyright">
+        Made With <i class="fa-solid fa-heart"></i> By Ezz
+      </p>
+    </div>
+
+    <!-- End Footer Section -->
   </body>
 </html>
