Add Favicon and finish

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="imgs/favicon.png" type="image/png" />
     <!-- Normalize - Render All Elements Normally -->
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- Font Awesome Library -->
@@ -963,7 +964,7 @@
           </div>
           <div class="line">
             <i class="fa-solid fa-phone-volume"></i>
-            <div class="info">+20123456789 <br>+20198765432</div>
+            <div class="info">+20123456789 <br />+20198765432</div>
           </div>
         </div>
         <div class="box footer-gallery">
